# pyproject.toml

[project]
name = "NeuralMeasureOperators"
version = "0.1.0"
description = "Finite computational representations of operators acting on functions, fields, and empirical measures."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["NeuralMeasureOperators*"]
