# pyproject.toml

[project]
name = "neural-measure-operators"
version = "0.1.0"
description = "Finite computational representations of operators acting on functions, fields, and empirical measures."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Mingshu Wang" }
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["NeuralMeasureOperators*"]